@@ -34,6 +34,8 @@ cupt (2.10.0~) UNRELEASED; urgency=low
         they're finally world-readable.
       - Verifying repository signatures: display better error message when
         a key has expired.
+      - Verifying repository signatures: display 'public key not found'
+        warning message also if there are no available keyrings.
       - Removed the 'copy the keyring' hack, introduced in 2.2.2.
       - Removed support of localized descriptions without a description hash
         present in the original index (even oldstable has them).
